<?xml version="1.0"?>
<?xml-model
  href="https://raw.githubusercontent.com/ros2/ros2/main/ros2doc/ardent/ardent_package_format.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mri_tomo_display</name>
  <version>0.1.0</version>
  <description>Package for MRI Tomography Display</description>
  
  <maintainer email="hunghm124@gmail.com">jimmy</maintainer>
  
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>unity_robotics_demo_msgs</depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>itk</build_depend>
  
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>itk</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
